fixed header on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,7 +19,6 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-    max-width: 100%;
 
     .title-bold {
         font-weight: 400;
@@ -33,6 +32,10 @@
     &,
     &:visited {
         color: $white-color;
+    }
+
+    @include media-query($on-palm) {
+        font-size: 2.5em;
     }
 }
 
